argocd/aws/203403084713/clusters/cbioportal-prod/apps/oncokb-beta/oncokb_curation_beta.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: oncokb-curation-beta
    tags.datadoghq.com/env: eks-beta-oncokb
    tags.datadoghq.com/service: oncokb-curation
  name: oncokb-curation-beta
  namespace: oncokb
spec:
  replicas: 1
  selector:
    matchLabels:
      run: oncokb-curation-beta
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: oncokb-curation-beta
        tags.datadoghq.com/env: eks-beta-oncokb
        tags.datadoghq.com/service: oncokb-curation
        admission.datadoghq.com/enabled: "true"
      annotations:
        admission.datadoghq.com/java-lib.version: v1.24.2
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: prod,api-docs,no-liquibase
            - name: APPLICATION_FIREBASE_ENABLED
              value: "true"
            - name: APPLICATION_REDIS_ENABLED
              value: "true"
            - name: APPLICATION_REDIS_TYPE
              value: "$(REDIS_TYPE)"
            - name: APPLICATION_REDIS_ADDRESS
              value: "$(REDIS_ADDRESS)"
            - name: APPLICATION_REDIS_PASSWORD
              value: "$(REDIS_PASSWORD)"
            - name: SPRING_DATASOURCE_URL
              value: "$(DB_URL)/oncokb_curation_beta"
            - name: SPRING_DATASOURCE_USERNAME
              value: "$(DB_USERNAME)"
            - name: SPRING_DATASOURCE_PASSWORD
              value: "$(DB_PASSWORD)"
            # These are the redis properties for setting up spring sessions
            - name: SPRING_REDIS_HOST
              value: "$(REDIS_HOST)"
            - name: SPRING_REDIS_PORT
              value: "$(REDIS_PORT)"
            - name: SPRING_REDIS_PASSWORD
              value: "$(REDIS_PASSWORD)"
            - name: LOGGING_LEVEL_ROOT
              value: "INFO"
            - name: LOGGING_PATTERN_CONSOLE
              value: "%d{yyyy-MM-dd HH:mm:ss} %-5p [%X{requestId}]  %C:%L - %X{dd.trace_id} %X{dd.span_id} - %m%n"
            - name: APPLICATION_ONCOKBDATARELEASE_URL
              value: "http://oncokb-data-release-beta:8085"
            - name: JHIPSTER_CORS_ALLOWED_ORIGIN_PATTERNS
              value: "https://*.oncokb.org"
          image: mskcc/oncokb-curation:2.2.26
          imagePullPolicy: Always
          # use actionable variants endpoint to cache everything
          readinessProbe:
            httpGet:
              path: /
              port: 9090
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 9090
            initialDelaySeconds: 10
            timeoutSeconds: 10
            periodSeconds: 3000
          name: oncokb-curation-beta
          ports:
            - name: http
              containerPort: 9090
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            # The subPath is needed so that mounting the secret as a single file doesn't override
            # the contents of the existing directory.
            - mountPath: /app/resources/oncokb-firebase-credentials.json
              subPath: oncokb-firebase-credentials.json
              name: firebase-credentials
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "oncokb-beta"
          effect: "NoSchedule"
      nodeSelector:
        workload: oncokb-beta
      volumes:
        - name: firebase-credentials
          secret:
            secretName: oncokb-firebase-dev-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: oncokb-curation-beta
  namespace: oncokb
spec:
  ports:
    - port: 9090
      name: http
      targetPort: 9090
  selector:
    run: oncokb-curation-beta
  type: ClusterIP
