argocd/aws/203403084713/clusters/cbioportal-prod/apps/oncokb-beta/ingress_oncokb.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oncokb-beta-ingress
  namespace: oncokb
  annotations:
    # kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/limit-rps: "100"
    # nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    # # the following has to be added due to an issue of from-to-www-redirect. https://github.com/kubernetes/ingress-nginx/issues/2043
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   if ($host = 'oncokb.org' ) {
    #     rewrite ^ https://www.oncokb.org$request_uri permanent;
    #   }
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    # ingress.kubernetes.io/large-client-header-buffers: "4 32k"
    # increae max response size to avoid 413 errors see
    # https://github.com/kubernetes/ingress-nginx/issues/1824
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    ingress.kubernetes.io/proxy-body-size: 512m
    # add proxy protocol to header
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
spec:
  ingressClassName: nginx  # ADDED THIS LINE
  tls:
  # we need to keep the oncokb.org in the tls list so the SSL cert includes the domain so after forwarding, it would not have SSL cert error
  - hosts:
    # - oncokb.org
    - beta.oncokb.org
    - beta.transcript.oncokb.org
    - beta.curation.oncokb.org
    - beta.report.oncokb.org
    secretName: oncokb-cert
  rules:
  # we have to keep the oncokb.org entry because of the from-to-www-redirect issue above
  - host: beta.oncokb.org
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: oncokb-public-beta
            port:
              name: http
  - host: beta.transcript.oncokb.org
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: oncokb-transcript-beta
              port:
                name: http
  - host: beta.curation.oncokb.org
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: oncokb-curation-beta
              port:
                name: http
  - host: beta.report.oncokb.org
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: oncokb-patient-report-beta
              port:
                number: 8080
